--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
                     <div class="b47">
                         <img src="/images/Screenshot 2025-08-29 153651.png">
                     </div>
+              <div class="b5"></div>
           </div>
     </div> 
 </body>
