--- a/index.html
+++ b/index.html
@@ -109,9 +109,80 @@
                         <img src="/images/Screenshot 2025-08-29 153651.png">
                     </div>
               <div class="b5">
-                <div class="b51"></div>
+                <div class="b51">
+                      <img src="/images/tea.png">
+                      <b style="font-size:13px;">&nbsp;Beauty, Food, Toys & more</b>
+                       <p>&nbsp;&nbsp;Coffee powder<br><b style="font-size:15px" >upto 80% off</b></p>
+
+                    </div>
+                    <div class="b52">
+                      <img src="/images/cycle.png">
+                      <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Geared Cycles<br><b style="font-size:15px" >&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;Up to 70% off </b></p>
+
+                    </div>
+                    <div class="b53">
+                      <img src="/images/pens.png">
+                      <p>Top Selling Stationery<br><b style="font-size:15px" >&nbsp; &nbsp;&nbsp;&nbsp;From ₹49</b></p>
+
+                    </div>
+                    <div class="b54">
+                      <img src="/images/car.png">
+                      <p>Remote Control Toys<br><b style="font-size:15px" >&nbsp; &nbsp;&nbsp;&nbsp;Up to 80% off</b></p>
+
+                    </div>
+                    <div class="b55">
+                      <img src="/images/toys.png">
+                      <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Soft Toys<br><b style="font-size:15px" >&nbsp; &nbsp;&nbsp;&nbsp;Up to 70% off </b></p>
+
+                    </div>
+                    <div class="b56">
+                      <img src="/images/mannn.png">
+                      <p>Best of Action..<br><b style="font-size:15px" >Up to 70% off</b></p>
+
+                    </div>
+                    <div class="b57">
+                        <img src="/images/earth.png">
+                         <p>Puzzles & Cubes<br><b style="font-size:15px" >&nbsp; &nbsp;&nbsp;&nbsp;from ₹79</b></p>
+
+                    </div>
               </div>
           </div>
+          <div class="b6">
+                <div class="b61">
+                      <img src="/images/1.png">
+                      <b style="font-size:13px;">&nbsp;Sports, Healthcare & more</b>
+                       <p>&nbsp;Dry Fruits<br><b style="font-size:15px" >75% off</b></p>
+
+                    </div>
+                    <div class="b62">
+                      <img src="/images/2.png">
+                      <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Musical Toys<br><b style="font-size:15px" >&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;Under ₹199</b></p>
+
+                    </div>
+                    <div class="b63">
+                      <img src="/images/3.png">
+                      <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Tea Powder<br><b style="font-size:15px" >&nbsp; &nbsp;&nbsp;&nbsp;Upto 75% off</b></p>
+
+                    </div>
+                    <div class="b64">
+                      <img src="/images/4.png">
+                      <p>&nbsp;&nbsp;&nbsp;Breakfast Cereal<br><b style="font-size:15px" >&nbsp; &nbsp;&nbsp;&nbsp;Upto 70% off</b></p>
+
+                    </div>
+                    <div class="b65">
+                      <img src="/images/5.png">
+                      <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Honey<br><b style="font-size:15px" >&nbsp; &nbsp;&nbsp;&nbsp;Up to 70% off </b></p>
+
+                    </div>
+                    <div class="b66">
+                      <img src="/images/6.png">
+                      <p>Learning & Edu..<br><b style="font-size:15px" >Upto 70% off</b></p>
+
+                    </div>
+                    <div class="b67"></div>
+                    </div>
+          </div>
+           <div class="b71" ></div>     
     </div> 
 </body>
 </html>
